RESOLVED FIXED221076
[LFC][IFC] Incorrect soft opportunity position when the inline box starts with an atomic inline box
https://bugs.webkit.org/show_bug.cgi?id=221076
Summary [LFC][IFC] Incorrect soft opportunity position when the inline box starts wit...
alan
Reported 2021-01-27 20:36:08 PST
text<span><img></span> the soft wrap opportunity should be right before the <span> and not after.
Attachments
Patch (3.10 KB, patch)
2021-01-27 20:51 PST, alan
no flags
alan
Comment 1 2021-01-27 20:51:54 PST
EWS
Comment 2 2021-01-28 06:01:33 PST
Committed r272012: <https://trac.webkit.org/changeset/272012> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418614 [details].
Radar WebKit Bug Importer
Comment 3 2021-01-28 06:02:39 PST
Note You need to log in before you can comment on or make changes to this bug.