[LFC][IFC] Incorrect soft opportunity position when the inline box starts with an atomic inline box https://bugs.webkit.org/show_bug.cgi?id=221076

Reviewed by Antti Koivisto.

This patch fixes the following case:
  "text_content<span><img></span>"
On trunk we find the soft wrap opportunity after the <span> which could result the following, incorrect line setup
line #1: text_content<span>
line #2  <img></span>
This makes the inline box (<span>) taller than it is supposed to be as it shows up on both the first and the second line.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::nextWrapOpportunity const):


Canonical link: https://commits.webkit.org/233437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272012 268f45cc-cd09-0410-ab3c-d52691b4dbfc